--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,13 @@
 apply plugin: 'java'
 apply plugin: 'application'
 mainClassName="MyFirstProgram"
+
+repositories {
+    mavenCentral()
+}
+dependencies {
+    implementation 'org.testng:testng:7.1.0'
+}
+test {
+    useTestNG()
+}
