--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -6,4 +6,5 @@
  }
 dependencies {
  implementation 'org.testng:testng:7.1.0'
+ implementation 'org.seleniumhq.selenium:selenium-grid:4.0.0-alpha-5'
 }
