--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -7,4 +7,5 @@
 dependencies {
  implementation 'org.testng:testng:7.1.0'
  implementation 'org.seleniumhq.selenium:selenium-grid:4.0.0-alpha-5'
+ implementation 'org.hamcrest:hamcrest:2.2'
 }
