--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -8,4 +8,5 @@ dependencies {
  implementation 'org.testng:testng:7.1.0'
  implementation 'org.seleniumhq.selenium:selenium-grid:4.0.0-alpha-5'
  implementation 'org.hamcrest:hamcrest:2.2'
+ implementation 'com.beust:jcommander:1.78'
 }
