--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -9,4 +9,7 @@ dependencies {
  implementation 'org.seleniumhq.selenium:selenium-grid:4.0.0-alpha-5'
  implementation 'org.hamcrest:hamcrest:2.2'
  implementation 'com.beust:jcommander:1.78'
+ implementation 'com.thoughtworks.xstream:xstream:1.4.8'
+ implementation 'com.google.code.gson:gson:2.8.6'
+
 }
