--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -11,5 +11,28 @@ dependencies {
  implementation 'com.beust:jcommander:1.78'
  implementation 'com.thoughtworks.xstream:xstream:1.4.8'
  implementation 'com.google.code.gson:gson:2.8.6'
-
 }
+
+ task testGroups(type: Test) {
+  useTestNG {
+   suites 'src/test/resources/testng-groups.xml'
+  }
+  if (project.hasProperty('browser')) {
+   systemProperty 'browser', "${browser}"
+  }
+  if (project.hasProperty('target')) {
+   systemProperty 'target', "${target}"
+  }
+ }
+
+ task testContacts(type: Test) {
+  useTestNG {
+   suites 'src/test/resources/testng-contacts.xml'
+  }
+  if (project.hasProperty('browser')) {
+   systemProperty 'browser', "${browser}"
+  }
+  if (project.hasProperty('target')) {
+   systemProperty 'target', "${target}"
+  }
+ }
