--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -8,6 +8,12 @@ dependencies {
  implementation 'org.testng:testng:7.1.0'
  implementation 'org.seleniumhq.selenium:selenium-grid:4.0.0-alpha-5'
  implementation 'org.hamcrest:hamcrest:2.2'
+ implementation 'org.apache.httpcomponents:httpclient:4.5.12'
+ implementation 'commons-net:commons-net:3.4'
+ implementation 'org.subethamail:subethasmtp:3.1.7'
+ implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.6'
+ implementation 'ch.qos.logback:logback-classic:1.2.3'
+
 }
 
  test {
