--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -17,9 +17,8 @@ dependencies {
 }
 
  test {
-  useTestNG {
-   suites 'src/test/resources/testng.xml'
-  }
+  useTestNG()
+
   if (project.hasProperty('browser')) {
    systemProperty 'browser', "${browser}"
   }
