--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -15,6 +15,7 @@ dependencies {
  implementation 'ch.qos.logback:logback-classic:1.2.3'
  implementation 'org.hibernate:hibernate-core:5.1.0.Final'
  implementation 'mysql:mysql-connector-java:8.0.20'
+ implementation 'biz.futureware.mantis:mantis-axis-soap-client:1.2.19'
 
 }
 
