--- a/mantis-tests/src/test/resources/local.properties
+++ b/mantis-tests/src/test/resources/local.properties
@@ -1,4 +1,4 @@
-web.baseUrl = http://localhost/mantisbt-1.3.0
+web.baseUrl = http://localhost/mantisbt-1.3.20
 web.adminLogin = administrator
 web.adminPassword = root
 
@@ -10,3 +10,5 @@ mailserver.host = localhost
 mailserver.port = 4555
 mailserver.adminlogin = root
 mailserver.adminpassword = root
+
+soap.url = http://localhost/mantisbt-1.3.20/api/soap/mantisconnect.php
