--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -18,6 +18,7 @@ dependencies {
  implementation 'mysql:mysql-connector-java:8.0.20'
  implementation 'org.hibernate:hibernate-core:5.1.0.Final'
  implementation "ru.yandex.qatools.allure:allure-testng-adaptor:1.4.0.RC4"
+ implementation 'org.robotframework:robotframework:3.0'
  agent "org.aspectj:aspectjweaver:1.8.0"
 
 }
@@ -60,4 +61,11 @@ dependencies {
   if (project.hasProperty('verifyUI')) {
    systemProperty 'verifyUI', "${verifyUI}"
   }
+ }
+
+ task rf(type: JavaExec) {
+  main = 'org.robotframework.RobotFramework'
+  classpath = sourceSets.test.runtimeClasspath
+  args '--outputdir', 'build/rf-report'
+  args 'src/test/resources/rf'
  }
