--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -19,6 +19,8 @@ dependencies {
  implementation 'org.hibernate:hibernate-core:5.1.0.Final'
  implementation "ru.yandex.qatools.allure:allure-testng-adaptor:1.4.0.RC4"
  implementation 'org.robotframework:robotframework:3.0'
+ implementation 'info.cukes:cucumber-java:1.2.4'
+ implementation 'info.cukes:cucumber-testng:1.2.4'
  agent "org.aspectj:aspectjweaver:1.8.0"
 
 }
@@ -68,4 +70,10 @@ dependencies {
   classpath = sourceSets.test.runtimeClasspath
   args '--outputdir', 'build/rf-report'
   args 'src/test/resources/rf'
+ }
+
+ task bdd(type: Test) {
+  useTestNG {
+   suites 'src/test/resources/testng-bdd.xml'
+  }
  }
